[package]
name = "zcash-sapling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ed-on-bls12-381 = "0.4.0"
ark-ff = "0.4.2"
ark-std = "0.4.0"
ark-test-curves = "0.4.2"
blake2b_simd = "1.0.2"
rand = "0.8.5"
